brat/test/golden/error/fanout-not-enough-overs.brat.golden
Error in test/golden/error/fanout-not-enough-overs.brat on line 2:
f = { [/\] }
    ^^^^^^^^

  Expected function to return additional values of type: (c1 :: Nat)

